--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body{
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    font-family: 'Comic Sans MS';
+    font-family: "Patrick Hand", serif;
 }
 #result{
     display: flex;
@@ -52,7 +52,7 @@ body{
 }
 #field{
     color: var(--text-color);
-    font-family: 'Comic Sans MS';
+    font-family: "Patrick Hand", serif;
     font-weight: bolder;
     background:none;
     font-size: 6vh;
@@ -80,7 +80,7 @@ body{
 
 }
 .button{
-    font-family: 'Comic Sans MS';
+    font-family: "Patrick Hand", serif;
     font-weight: bolder;
     box-shadow: var(--shadow);
     font-size: 6vh;
