--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ body{
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    font-family: "Patrick Hand", serif;
 }
 #result{
     display: flex;
@@ -52,7 +51,7 @@ body{
 }
 #field{
     color: var(--text-color);
-    font-family: "Patrick Hand", serif;
+    font-family: 'Comic Sans MS', 'Comic Neue', sans-serif;
     font-weight: bolder;
     background:none;
     font-size: 6vh;
@@ -80,8 +79,8 @@ body{
 
 }
 .button{
-    font-family: "Patrick Hand", serif;
-    font-weight: bolder;
+    font-family: 'Comic Sans MS', 'Comic Neue', sans-serif;    
+     font-weight: bolder;
     box-shadow: var(--shadow);
     font-size: 6vh;
     text-align: center;
@@ -136,7 +135,7 @@ img{
     #buttons{
         width: 90vw;
         gap: 1vh;
-        padding-top: 5vh;
+        padding-top: 1vh;
         
     }
     .button{
