--- a/css/style.css
+++ b/css/style.css
@@ -157,9 +157,9 @@ img{
         transform: scale(0.95);
     }
    img{
-        padding-top: 2.21vh ;
-        border-radius:3vh;
-        
+        padding-top: 2.31vh ;
+        border-radius:7vw;
+
     }
 }
 
