--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ body{
     height: 10vh;
     border: none;
     transition: box-shadow 0.2s, transform 0.2s;
+    overflow: hidden;
 }
 .button:hover{
     box-shadow: 1px 1px 12px rgba(0, 0, 0, 1);
@@ -107,10 +108,8 @@ body{
     transform: scale(0.95);
 }
 img{
-    padding: 0vh ;
     width: auto;
     height: 10vh;
-    border-radius:2.3vh;
 }
 /* ////////////////////////////////////////////////////////////////////// */
 @media (max-width: 480px) {
@@ -158,7 +157,7 @@ img{
     }
    img{
         padding-top: 2.31vh ;
-        border-radius:7vw;
+        object-fit: cover;
 
     }
 }
